--- a/.github/workflows/push-changes.yml
+++ b/.github/workflows/push-changes.yml
@@ -2,37 +2,35 @@ name: Auto Commit and Push Changes
 
 on:
   push:
-    branches: [ main ]
-  workflow_dispatch:
-
-permissions:
-  contents: write
+    branches:
+      - main
+    paths:
+      - '**/*.png'
+  schedule:
+    - cron: '0 0 * * 0'
+  workflow_run:
+    workflows: ["Train Model"]
+    types:
+      - completed
 
 jobs:
-  commit-and-push:
+  auto-commit:
+    if: github.event_name != 'workflow_run' || github.event.workflow_run.conclusion == 'success'
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout repo
-      uses: actions/checkout@v3
+      - name: Checkout repo
+        uses: actions/checkout@v4
 
-    - name: Set up git config
-      run: |
-        git config --global user.name "github-actions"
-        git config --global user.email "github-actions@github.com"
+      - name: Set up git config
+        run: |
+          git config --global user.name "github-actions"
+          git config --global user.email "github-actions@github.com"
 
-    - name: Make your changes
-      run: |
-        echo "You can make changes here or before this step."
+      - name: Commit changes
+        run: |
+          git add .
+          git commit -m "Update evaluation images [skip ci]" || echo "No changes to commit"
 
-    - name: Commit changes
-      run: |
-        git add .
-        git commit -m "Update evaluation images [skip ci]" || echo "No changes to commit"
-
-    - name: Push changes
-      env:
-        TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      run: |
-        git remote set-url origin https://x-access-token:${TOKEN}@github.com/${{ github.repository }}
-        git push origin HEAD:${{ github.ref }}
+      - name: Push changes
+        run: git push origin main
